# umu-protonfixes

./: .gitignore  .gitmodules  .pre-commit-config.yaml  230820.py  370460.py  661990.py  LICENSE  Makefile  README.md  __init__.py  build.sh  cabextract_1.9-1.debian.tar.xz  checks.py  config.py  config_base.py  debug.py  dlloverrides.json  download.py  engine.py  fix.py  libmspack.so.0  libmspack_0.10.1-1.debian.tar.xz  logger.py  optiscaler.py  protonfixes_test.py  protonversion.py  pyproject.toml  ruff.toml  splash.py  steamhelper.py  symlinkfix.sh  umu-database.csv  upscalers.py  util.py  utilities.py  vcrunfix  winetricks  winetricks_proton5  x11-xserver-utils_7.7+10.tar.xz  xrandr  (+1 more)
.github/: dependabot.yml
gamefixes-EGS/: ulwgl-1151640.py
gamefixes-GOG/: ulwgl-1151640.py  ulwgl-1207658883.py  ulwgl-22610.py  ulwgl-22650.py
gamefixes-Humble/: ulwgl-ysorigin.py
gamefixes-Steam/: 105400.py  1056640.py  1097880.py  113400.py  1174180.py  1250410.py  1259970.py  1284410.py  1293820.py  1795390.py  206480.py  207350.py  211420.py  219030.py  242760.py  244210.py  282900.py  307780.py  329380.py  35140.py  351710.py  372000.py  379720.py  386360.py  397540.py  40950.py  428660.py  434570.py  45750.py  460120.py  544750.py  55150.py  582660.py  627270.py  633230.py  678950.py  72850.py  773370.py  812140.py  816020.py
gamefixes-ULWGL/: default.py  ulwgl-model2.py  winetricks-gui.py  y-s-origin.py
gamefixes-amazon/: umu-976590.py
gamefixes-ea/: umu-1222690.py  umu-2009100.py
gamefixes-egs/: default.py  ulwgl-1174180.py  ulwgl-19900.py  ulwgl-397540.py  umu-1139900.py  umu-1151640.py  umu-1248080.py  umu-1361510.py  umu-1370140.py  umu-1475810.py  umu-15100.py  umu-1521160.py  umu-1544020.py  umu-1659420.py  umu-2138710.py  umu-2144740.py  umu-2229940.py  umu-2552430.py  umu-2767030.py  umu-286690.py  umu-287390.py  umu-306130.py  (+16 more)
(+784 files in other folders)
