[project]
name = "umu-protonfixes"
description = "Stop gap solution to fix issues in games that run under Wine."
keywords = ["proton", "protontricks", "wine", "winetricks", "linux", "gaming"]
license = {file = "LICENSE"}
requires-python = "3.9"


[project.urls]
Repository = "https://github.com/Open-Wine-Components/umu-protonfixes.git"
Issues = "https://github.com/Open-Wine-Components/umu-protonfixes/issues"


[tool.pyright]
exclude = [
    "**/__pycache__",
    "subprojects",
    "verbs"
]
extraPaths = [ ".." ] # Fix "protonfixes" module resolution
pythonVersion = "3.9"
pythonPlatform = "Linux"

# Pyright rules, that are not covered by `typeCheckingMode = 'standard'`
# https://microsoft.github.io/pyright/#/configuration?id=diagnostic-settings-defaults
reportMissingModuleSource = "error"
reportUnusedImport = "error"
reportDuplicateImport = "error"
reportWildcardImportFromLibrary = "error"
reportShadowedImports = "error"
